Description
Since revision r58770 (when the new csrss was added) using the command prompt occasionally causes csrsrv.dll to break into the debugger with the following message:
(ReactOS/subsystems/win32/csrsrv/server.c:606) CsrUnhandledExceptionFilter called
Sometimes the csrss.exe process also crashes, causing a bugcheck due to a critical process being terminated. This is the backtrace of such a crash:
<NTOSKRNL.EXE:129a33 (ReactOS/lib/rtl/i386/debug_asm.S:35 (_DbgBreakPoint@0))>
Frames:
<NTOSKRNL.EXE:f4f02 (ReactOS/ntoskrnl/ps/kill.c:1195 (NtTerminateProcess@8))>
<NTOSKRNL.EXE:1153a8 (ReactOS/ntoskrnl/ke/i386/traphdlr.c:1619 (@KiSystemServiceHandler@8))>
<NTOSKRNL.EXE:3c37 (ReactOS/ntoskrnl/ke/i386/trap.s:142 (_KiSystemService))>
<NTOSKRNL.EXE:24d4 (ReactOS/ntoskrnl/include/sysfuncs.h:0 (_ZwTerminateProcess@8))>
<NTOSKRNL.EXE:110cec (ReactOS/ntoskrnl/ke/i386/exp.c:1115 (KiDispatchExceptionFromTrapFrame@28))>
<NTOSKRNL.EXE:1137f6 (ReactOS/ntoskrnl/ke/i386/traphdlr.c:216 (@KiDebugHandler@16))>
<NTOSKRNL.EXE:113ea4 (ReactOS/ntoskrnl/ke/i386/traphdlr.c:584 (@KiTrap03Handler@4))>
<NTOSKRNL.EXE:3041 (ReactOS/ntoskrnl/ke/i386/trap.s:0 (_KiTrap03))>
<004102cd>
<csrsrv.dll:74e1>
<consrv.DLL:683b>
<consrv.DLL:68ad>
<consrv.DLL:7161>
<consrv.DLL:752b>
<csrsrv.dll:4973>
<csrsrv.dll:49ce>
<csrsrv.dll:4bb4>
<csrsrv.dll:67de>
<csrsrv.dll:6d8e>
<csrsrv.dll:26ba>
This bug only occurs in the LiveCD version.