[CONSRV] Hack: To try to uncover a heap corruption in CONSRV, use our own heap instead of the (default) CSR heap, so that we won't corrupt it and obtain strange bugs thrown by memory allocation in csrsrv. Thanks to Aleksandar Andrejevic, aka. [TheFlash] for having seen that. See CORE-7157 for more information.

svn path=/trunk/; revision=58926